[package]
name = "bergamot"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xcb = { version = "^0.9", features = ["randr"] }
cairo-rs = { version = "^0.9", features = ["xcb"] }
pango = "^0.9"
pangocairo = "^0.10"

