[package]
name = "bergamot"
version = "0.2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
xcb = { version = "^0.9", features = ["randr"] }
cairo-rs = { version = "^0.9", features = ["xcb"] }
pango = "^0.9"
pangocairo = "^0.10"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

