[package]
name = "bergamot"
version = "0.2.0"
authors = ["toshokan <toshokan@shojigate.net>"]
edition = "2018"

[dependencies]
xcb = { version = "1", features = ["randr"] }
cairo-rs = { version = "^0.15", features = ["xcb"] }
pango = "^0.15"
pangocairo = "^0.15"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

